scrollbar issues

--- a/client/src/components/layout/Boxes.css
+++ b/client/src/components/layout/Boxes.css
@@ -23,6 +23,15 @@
     color: #1E1C61;
 }
 
+.allQuestions{
+    position: relative;
+    width: 100%;
+    left:0px;
+    top:0px;
+    height: calc(100% - 111px);
+    overflow-y: scroll;
+}
+
 #prescriptionBox{
     box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
 }
@@ -77,7 +86,7 @@
 
 .questionContainer{
     position: relative;
-    width: 100%;
+    width: calc(100%-20px);
     padding-bottom: 10px;
     padding-left: 20px;
     overflow-y: scroll;
@@ -91,7 +100,7 @@
 
 .questionText{
     position: relative;
-    width: 90%;
+    width: calc(100%-40px);
     font-family: Lato;
     font-style: normal;
     font-weight: 600;
@@ -101,7 +110,7 @@
 }
 
 .questionInput{
-    width: 85%;
+    width: calc(100%-40px);
     border: 0.382829px solid #EBE1E7;
     box-sizing: border-box;
     border-radius: 1.53131px;
